--- a/Package.json
+++ b/Package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-form-send-email-via-google-script-without-server",
+  "name": "test",
   "version": "2.0.0",
   "description": "Tutorial showing how to save data to a google doc spreadsheet from any html form (including sending emails!)",
   "main": "static-server.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dwyl/html-form-send-email-via-google-script-without-server.git"
+    "url": "git+https://kreuter97.github.io/test/"
   },
   "keywords": [
     "tutorial",
@@ -17,12 +17,12 @@
     "email",
     "form"
   ],
-  "author": "nelsonic @dwyl",
+  "author": "CJ Kreuter",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/dwyl/html-form-send-email-via-google-script-without-server/issues"
+    "url": "https://kreuter97.github.io/test/"
   },
-  "homepage": "https://github.com/dwyl/html-form-send-email-via-google-script-without-server#readme",
+  "homepage": "https://kreuter97.github.io/test/",
   "devDependencies": {
     "live-server": "^1.2.0"
   }
